rabbitmq and jvm